--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">SpellingC</string>
     <string name="title_activity_study">Study</string>
     <string name="team_mail"><u>mailtobanglabee@gmail.com</u></string>
+    <string name="facebook_app_id">959835424151875</string>
+    <string name="tag">ভাষার মাসে শুদ্ধ বাংলা</string>
 </resources>
